# milk-inventory

./: Dockerfile  LICENSE  README.md  pyproject.toml
api/: .gitignore  app.py  config.ini  milk_container.db
api/api/: app.py  db.py
api/api/models/: inventory.py
utils/: qr_code_generator.py
